# NarraState

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  NarraState_PRD_Architecture.md  README.md  REVIEW_PHASE_0_5.md  THIRD_PARTY.md  codecov.yml  docker-compose.yml  start.ps1  start.sh
.cargo/: audit.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
apps/narrastate-server/: Cargo.toml
apps/narrastate-server/src/: api.rs  main.rs
cases/golden-invalid/: README.md
cases/golden-invalid/disclosure-deadlock/: case.json  expected.json  manifest.json
cases/golden-invalid/false-suspect-confession/: case.json  expected.json  manifest.json
cases/golden-invalid/hidden-required-evidence/: case.json  expected.json  manifest.json
cases/golden-invalid/insufficient-divergence/: case.json  expected.json  manifest.json
cases/rain-gallery/: README.md  case.json
cases/rain-gallery-variants/: README.md  case.json  manifest.json
crates/narrastate-case/: Cargo.toml
crates/narrastate-case/examples/: generate_invalid_goldens.rs  generate_three_variant.rs
crates/narrastate-case/src/: adapter.rs  canonical.rs  compiler.rs  draft.rs  generation_pipeline.rs  lib.rs  package.rs  selector.rs  simulator.rs  validation.rs  visual.rs
crates/narrastate-case/tests/: compiler_tests.rs  draft_tests.rs  generation_pipeline_tests.rs  golden_package_tests.rs  package_tests.rs  simulation_tests.rs  validation_tests.rs  visual_tests.rs
crates/narrastate-core/: Cargo.toml
crates/narrastate-core/src/: case.rs  case_template.rs  character.rs  claim.rs  disclosure.rs  evidence.rs  fact.rs  generation.rs  id.rs  lib.rs  phase.rs  session.rs  strategy.rs  transition.rs  validation.rs
crates/narrastate-core/tests/: architecture_regressions.rs  generation_tests.rs  property_tests.proptest-regressions  property_tests.rs  unit_tests.rs
crates/narrastate-provider/: Cargo.toml
crates/narrastate-provider/src/: case_generation.rs  image_generation.rs  interpreter.rs  lib.rs  openai_compatible.rs  renderer.rs  validator.rs
crates/narrastate-provider/tests/: case_generation_provider_tests.rs  provider_tests.rs
crates/narrastate-runtime/: Cargo.toml
crates/narrastate-runtime/src/: engine.rs  evaluator.rs  lib.rs  mock.rs  planner.rs  ports.rs  visual_guard.rs
crates/narrastate-runtime/tests/: golden_tests.rs  smoke_tests.rs
crates/narrastate-storage/: Cargo.toml
crates/narrastate-storage/src/: lib.rs  migrations.rs  repository.rs
crates/narrastate-storage/tests/: smoke_tests.rs  storage_tests.rs
docs/: api.md  architecture.md  case-authoring.md  case-format.md  case-generation.md  security.md  simulation.md  solution-variants.md  validation.md  visual-assets.md
packaging/: README.txt  start.ps1  start.sh
schemas/: narrastate-case-manifest-v0.2.schema.json  narrastate-case-template-v0.2.schema.json  narrastate-case.schema.json  narrastate-generated-draft-v0.2.schema.json  narrastate-generation-request-v0.2.schema.json
tools/: check-powershell-security.ps1  check-tracked-secrets.sh  smoke-server.ps1  start-local.ps1  start-local.sh
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/design/: phase6-design-system.md
web/e2e/: release-smoke.spec.ts
web/src/: App.vue  router.ts  style.css
web/src/__tests__/: api.test.ts  basic.test.ts  conversation.test.ts  generation-design.test.ts  session-store.test.ts  ui-contract.test.ts
web/src/components/: AccusationDialog.vue  AppHeader.vue  AppIcon.vue  DeveloperDrawer.vue  NoticeBar.vue  SettingsDrawer.vue
web/src/components/home/: HeroScene.vue  NarrativeScrollScene.vue  ReplayScene.vue  SiteFooter.vue  SiteHeader.vue
web/src/content/: home.ts  homeAssets.ts
web/src/lib/: api.ts  appMotion.ts  conversation.ts  generationDesign.ts  homeScroll.ts  motionCore.ts  overlayMotion.ts  present.ts
web/src/pages/: CaseBriefPage.vue  CaseGenerationPage.vue  CaseListPage.vue  ConclusionPage.vue  HomePage.vue  InvestigationPage.vue
web/src/stores/: session.ts
web/src/types/: api.ts
