[workspace]
resolver = "2"
members = [
    "crates/narrastate-core",
    "crates/narrastate-runtime",
    "crates/narrastate-provider",
    "crates/narrastate-storage",
    "apps/narrastate-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
