[workspace]
resolver = "2"
members = [
    "crates/narrastate-core",
    "crates/narrastate-case",
    "crates/narrastate-runtime",
    "crates/narrastate-provider",
    "crates/narrastate-storage",
    "apps/narrastate-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2", features = ["uuid1"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "chrono", "derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"
sha2 = "0.11"
