[package]
name = "narrastate-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
narrastate-core = { path = "../../crates/narrastate-core" }
narrastate-runtime = { path = "../../crates/narrastate-runtime" }
narrastate-provider = { path = "../../crates/narrastate-provider" }
narrastate-storage = { path = "../../crates/narrastate-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
