[package]
name = "narrastate-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
narrastate-core = { path = "../../crates/narrastate-core" }
narrastate-runtime = { path = "../../crates/narrastate-runtime" }
narrastate-provider = { path = "../../crates/narrastate-provider" }
narrastate-storage = { path = "../../crates/narrastate-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
