[package]
name = "narrastate-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
narrastate-runtime = { path = "../narrastate-runtime" }
narrastate-core = { path = "../narrastate-core" }
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
schemars.workspace = true
base64 = "0.22"
futures-util.workspace = true

[dev-dependencies]
tokio.workspace = true
