[package]
name = "narrastate-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
narrastate-core = { path = "../narrastate-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
async-trait.workspace = true
